sites/github-extra.css
/**
host: github.com
*/

.top-nav{display:none;}
#site-container > .container:first-child {margin-top:0;}
.header .container .notification-indicator,.header .container .divider-vertical
{height:34px;line-height:34px;}
.header-logo-blacktocat{padding-bottom:3px;padding-top:4px;}
#user-links a{padding-bottom:0;}

pre, code, tt {
	/* wrap diffs, this also fits inline comments in diffs to viewport width */
	/* XXX research pre-line vs pre-wrap */
	white-space: pre-line;
}

/* fit contribution graph into screen better at smaller widths */
svg {
	margin-left: -20px;
}

